# AyED-Juarez

./: LICENSE  README.md
TP1/: .gitignore  CMakeLists.txt  README.md  main.cpp  test.sh  valgrind.sh
TP1/.github/workflows/: classroom.yml
TP1/include/: Funciones.hpp  Megatron.hpp  OptimusPrime.hpp
TP1/src/: Funciones.cpp  Megatron.cpp  OptimusPrime.cpp
TP1/tests/: CMakeLists.txt  MegatronTest.cpp  OptimusPrimeTest.cpp
TP2/: CMakeLists.txt  README.md  build.sh  cristales.csv  main.cpp
TP2/.github/workflows/: classroom.yml
TP2/include/: BovedaCristales.hpp  Cristal.hpp  FusionadorEnergon.hpp  GeneradorAleatorio.hpp  GestorBoveda.hpp  Megatron.hpp  Menu.hpp  Minusculas.hpp  OptimusPrime.hpp  Vector.hpp
TP2/src/: BovedaCristales.cpp  Cristal.cpp  FusionadorEnergon.cpp  GeneradorAleatorio.cpp  GestorBoveda.cpp  Megatron.cpp  Menu.cpp  Minusculas.cpp  OptimusPrime.cpp
TP2/tests/: CMakeLists.txt  FusionadorEnergonTest.cpp  MegatronTest.cpp
TP3 Grupal/: CMakeLists.txt  README.md  build.sh  main.cpp  tabla_clasificaciones.csv  transformers.csv
TP3 Grupal/.github/workflows/: classroom.yml
TP3 Grupal/UML/: clase.wsd  listaTDA.wsd
TP3 Grupal/include/: Archivos.hpp  Batalla.hpp  BovedaCristales.hpp  Cristal.hpp  FusionadorEnergon.hpp  GestorBoveda.hpp  Juego.hpp  ManejoTransformer.hpp  Megatron.hpp  Menu.hpp  Minusculas.hpp  OptimusPrime.hpp  Transformer.hpp
TP3 Grupal/include/SFML/: Conexion.hpp  Figura.hpp  MapaGrafo.hpp  NodoGrafico.hpp
TP3 Grupal/include/TDAs/: Cola.hpp  Diccionario.hpp  Heap.hpp  Lista.hpp  Matriz.hpp  NodoDiccionario.hpp  NodoLista.hpp  Pila.hpp  Vector.hpp
TP3 Grupal/include/TDAs/Grafo/: CaminoMinimo.hpp  Dijkstra.hpp  FloydWarshall.hpp  Grafo.hpp
TP3 Grupal/src/: Archivos.cpp  Batalla.cpp  BovedaCristales.cpp  Cristal.cpp  FusionadorEnergon.cpp  GestorBoveda.cpp  Juego.cpp  ManejoTransformer.cpp  Megatron.cpp  Menu.cpp  Minusculas.cpp  OptimusPrime.cpp  Transformer.cpp
TP3 Grupal/src/Grafo/: Dijkstra.cpp  FloydWarshall.cpp  Grafo.cpp
TP3 Grupal/src/SFML/: Conexion.cpp  Figura.cpp  MapaGrafo.cpp  NodoGrafico.cpp
TP3 Grupal/tests/: BovedaCristalesTest.cpp  CMakeLists.txt  ColaTest.cpp  DiccionarioTest.cpp  GrafoTest.cpp  HeapTest.cpp  ListaTest.cpp  OptimusPrimeTest.cpp  PilaTest.cpp  VectorTest.cpp
